# CodeWM_ProWES

./: README.md
2_Robustness/cStyleLang/: pyproject.toml  transformer.py
2_Robustness/cStyleLang/cStyleCodeObfuscator/: code_transform_provider.py  format.py
2_Robustness/cStyleLang/cStyleCodeObfuscator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
2_Robustness/cStyleLang/cStyleCodeObfuscator/mutable_tree/stringifiers/: js_stringifier.py
2_Robustness/cStyleLang/cStyleCodeObfuscator/mutable_tree/transformers/: __init__.py  condBlock_transformer.py  condition_transformer.py  idRename_transformer.py  ifFlatNest_transformer.py  loopCond_transformer.py  loopStmt_transformer.py  repos_varDecl_transformer.py  update_transformer.py  utils.py  (+1 more)
2_Robustness/pythonLang/: pyproject.toml
2_Robustness/pythonLang/pyCodeObfuscator/: cli.py
2_Robustness/pythonLang/pyCodeObfuscator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
2_Robustness/pythonLang/pyCodeObfuscator/core/: parser.py  rule_base.py  transformer.py
2_Robustness/pythonLang/pyCodeObfuscator/rules/: __init__.py
2_Robustness/pythonLang/tests/patternTest/: test.py  vistor.py
2_Robustness/pythonLang/tests/rulesTest/: test_boolean_explicit_true_false.py  test_condition_parentheses.py  test_dict_keys_usage.py  test_for_to_list_comprehension.py  test_format_percent_usage.py  test_initialize_ways.py  test_loop_index_direct_reference.py  test_naming_style.py  test_none_usage.py  test_op_opequal_usage.py  test_parameter_default_sorted.py  test_unnecessary_else.py
(+155 files in other folders)
