[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cStyleCodeObfuscator"        # pip list 中显示的名字 / pip install 用的名
version = "0.1.0"
description = "C-style code obfuscator for Python"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Cruise.zrz", email = "cruise.zrz@gmail.com" }
]
license = { text = "MIT" }

# 运行时依赖（没有就留空列表）
dependencies = [
]

# 一些可选依赖组，比如开发用
[project.optional-dependencies]
dev = [
  "pytest>=9",
  "black>=25",
  "mypy>=1.0",
]

[tool.setuptools]
# 明确指定要打包的顶层包名（即 import 用的那个目录名）
packages = ["cStyleCodeObfuscator"]
