[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyCodeObfuscator"        # pip list 中显示的名字 / pip install 用的名
version = "0.1.0"
description = "Python code obfuscator"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Cruise.zrz", email = "cruise.zrz@gmail.com" }
]
license = { text = "MIT" }

# 运行时依赖（没有就留空列表）
dependencies = [
  "libcst>=1.8.0",
  "click>=8.1.0",
]

# 一些可选依赖组，比如开发用
[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
# 明确指定要打包的顶层包名（即 import 用的那个目录名）
packages = ["pyCodeObfuscator"]